[gd_scene load_steps=3 format=3 uid="uid://6xw23jcvy5j7"]

[ext_resource type="FontFile" uid="uid://c15qulsl5wbmb" path="res://assets/fonts/RussoOne-Regular.ttf" id="1_3np86"]
[ext_resource type="Script" path="res://scenes/hud/level5/task_5_2.gd" id="1_jaui8"]

[node name="Task1" type="CanvasLayer"]
script = ExtResource("1_jaui8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1915.0
offset_bottom = 1084.0
color = Color(0.215686, 0.458824, 0.27451, 1)

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -603.0
offset_top = -491.0
offset_right = 535.0
offset_bottom = -241.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_3np86")
theme_override_font_sizes/font_size = 42
text = "Устали от биологии? Самое время сделать перерыв
и узнать что то новое. Вы знали о шифре Бэкон? 
Попоробуйте разгадать эту кодировку:
BAAAAABAABABABBAAAAAABABAAAAAA"

[node name="Label2" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -788.0
offset_top = 280.0
offset_right = 983.0
offset_bottom = 447.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_3np86")
theme_override_font_sizes/font_size = 40
text = "Подсказка: попробуйте перевод чисел в двоичную систему счисления"

[node name="Button" type="Button" parent="."]
offset_left = 661.0
offset_top = 386.0
offset_right = 1154.0
offset_bottom = 477.0
theme_override_fonts/font = ExtResource("1_3np86")
theme_override_font_sizes/font_size = 35
text = "Карбон"

[node name="Button2" type="Button" parent="."]
offset_left = 664.0
offset_top = 555.0
offset_right = 1157.0
offset_bottom = 646.0
theme_override_fonts/font = ExtResource("1_3np86")
theme_override_font_sizes/font_size = 35
text = "Диконсия"

[node name="Button3" type="Button" parent="."]
offset_left = 663.0
offset_top = 721.0
offset_right = 1156.0
offset_bottom = 812.0
theme_override_fonts/font = ExtResource("1_3np86")
theme_override_font_sizes/font_size = 35
text = "Пикайа"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
